# OrderCRM

./: .gitignore  CMakeLists.txt  README.md  code_structure.txt  diagram.puml  new_code_structure.txt
include/Errors/: CustomExceptions.h
include/core/: IProductRepository.h  IRepository.h  ISerializable.h  Order.h  Product.h
include/infrastructure/: TxtOrderRepository.h  TxtProductRepository.h
include/services/: OrderService.h  ProductService.h  ReportService.h
include/ui/: AddOrderDialog.h  AddProductDialog.h  EditOrderDialog.h  FilterDialog.h  MainWindow.h  NumericItem.h  ProductWindow.h  ReportDialog.h  StatisticsWindow.h  UtilsQt.h
include/utils/: SimpleList.h  validation_utils.h
src/: main.cpp
src/core/: Order.cpp
src/infrastructure/: TxtOrderRepository.cpp  TxtProductRepository.cpp
src/services/: OrderService.cpp  ProductService.cpp  ReportService.cpp
src/ui/: AddOrderDialog.cpp  AddProductDialog.cpp  EditOrderDialog.cpp  FilterDialog.cpp  MainWindow.cpp  ProductWindow.cpp  ReportDialog.cpp  StatisticsWindow.cpp  mainwindow.ui
